# artemis

./: README.md  setup.cfg
src/: artemis.py  artemis_config.py
