[metadata]
name="artemis"
version="0.0.1"
license="MIT"
description="Automated script to manage cryptocurrency positions on Binance Futures"
long_description=file: README.md
author="Thiago Almeida"
author_email=""
classifiers=[]

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires=[python-binance]
